# sdk-python

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  PARITY-GAP-4.8.0.md  PARITY_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: release-pypi.yml  test.yml
docs/: RELEASE.md
examples/: README.md  echo_provider.py  echo_requester.py  level0_echo.py  level1_agent.py  run_demo.py
scripts/: generate_parity_vectors.js  generate_python_parity_vectors.py  test_installed_wheel.sh  verify_python_vectors.js
src/agirails/: __init__.py  client.py  version.py
src/agirails/abi/: ACTPKernel.json
src/agirails/abis/: actp_kernel.json  agent_registry.json  bond_escalation.json  composite_mediator.json  i_optimistic_oracle_v3.json
src/agirails/adapters/: __init__.py  adapter_registry.py  adapter_router.py  base.py  basic.py  beginner.py  i_adapter.py  intermediate.py  standard.py  types.py  x402_adapter.py
src/agirails/api/: __init__.py  agirails_app.py  discover.py
src/agirails/builders/: __init__.py  counter_accept.py  counter_offer.py  delivery_proof.py  quote.py
src/agirails/cli/: main.py
src/agirails/config/: __init__.py  (+7 more)
src/agirails_sdk/: __init__.py  client.py  config.py  constants.py  errors.py  message_signer.py  models.py  proof_generator.py  quote_builder.py
test_scripts/: 00_setup.py  01_happy_path.py  02_dispute.py  03_cancel.py  04_happy_path_eas.py  05_eas_comprehensive.py  README.md  debug_create.py  status.py
tests/: test_client.py  test_client_paths.py  test_parity.py
tests/benchmarks/: test_performance.py
tests/integration/: test_blockchain_runtime.py  test_e2e_sepolia.py  test_eas.py
tests/integration_sepolia/: conftest.py  test_eoa_runtime_lifecycle.py  test_full_lifecycle.py  test_kernel_state_after_timelock.py  test_smart_wallet_lifecycle.py  test_web_receipts_live.py
tests/test_adapters/: test_adapter_router.py  test_basic.py  test_beginner.py  test_intermediate.py  test_parse_deadline.py  test_permit2_allowance.py  test_standard.py  test_unified_surface.py  test_x402_adapter.py  test_x402_v2_adapter.py
tests/test_api/: test_agirails_app.py
tests/test_builders/: test_counter_offer.py  test_counter_schema_branches.py  test_delivery_proof.py  test_quote.py
tests/test_cli/: test_agent_public_rpc.py  test_autopublish.py  test_buyer_aware_diff_pull.py  test_claim.py  test_claim_code.py  test_diff_pull_parity.py  test_e2e_publish_claim_discover.py  test_env_autoload.py  test_find.py  test_health.py  test_identity_pointer.py  test_pay.py  test_publish.py  test_publish_parity.py  test_receipt.py  test_register.py  test_repair.py  test_request.py  test_run_request_receipt.py  test_test.py  test_verify.py
tests/test_cli_deploy/: __init__.py  test_deploy.py
tests/test_config/: test_agirailsmd.py  test_agirailsmd_v4.py  test_buyer_link.py  test_networks_aa.py  test_on_chain_state.py  test_pending_publish.py  test_publish_pipeline.py  test_sync_operations.py  test_using_public_rpc.py
tests/test_cross_sdk/: test_aip21_parity.py  test_dispute_parity.py  test_dispute_vendor_parity.py  test_evidence_bundle.py  test_python_signed_determinism.py  test_wave0_hashing.py  test_wave2_delivery_core.py  test_wave3_x402.py  test_wave5_receipts.py
tests/test_delivery/: test_builders.py  test_fix1_encoding.py  test_relay_channel.py  test_roundtrip_channel.py  test_types_validate.py
tests/test_dispute/: test_bond_escalation.py  test_composite_mediator.py  test_dispute_client.py  test_evaluator_client.py  test_uma_helper.py
tests/test_erc8004/: __init__.py  test_bridge.py  test_bridge_parity_4_8_0.py  test_reputation_reporter.py
tests/test_errors/: test_transient_rpc.py
tests/test_golden/: test_airuling_golden.py  test_canonical_hashes.py
tests/test_level0/: test_provider.py  test_request.py
tests/test_level1/: test_agent_completion_proof.py  test_agent_counter_quote.py  test_agent_delivery_hook.py  test_agent_hash_routing.py  test_agent_job_decisions.py  test_pricing.py
tests/test_negotiation/: test_buyer_orchestrator.py  test_buyer_orchestrator_channel.py  test_decider_hooks.py  test_decision_engine.py  test_f5_price_band.py  test_negotiation_channel.py  test_policy_aip21_fields.py  test_policy_engine.py  test_provider_orchestrator.py  test_provider_policy_parity.py  test_relay_channel.py  test_session_store.py  test_verify_quote_on_chain.py
tests/test_properties/: test_canonical_json_properties.py  test_signing_properties.py  test_stateful_lifecycle.py  test_usdc_and_state_properties.py
tests/test_protocol/: test_agent_registry.py  test_contract_base.py  test_eas_verification.py  test_event_chunking_4_8_0.py  test_kernel_parity_4_8_0.py  test_kernel_parity_4_9_0.py  test_messages_generic.py  test_networks.py  test_proofs.py  test_x402_v2_errors.py
tests/test_receipts/: test_push.py  test_render_v3.py  test_web_receipt.py
tests/test_reputation/: test_dispute_split_indexer.py
tests/test_runtime/: test_accept_quote.py  test_blockchain_scan_window.py  test_concurrent_file_locking.py  test_mock_runtime.py  test_mock_runtime_parity_4_8_0.py  test_mock_state_manager.py  test_runtime_parity_4_8_0.py  test_subscribe_provider_jobs_4_8_0.py
tests/test_security/: test_security_audit.py
tests/test_server/: conftest.py  test_actp_serve.py  test_quote_channel_client.py  test_serve_e2e.py
tests/test_settle/: test_settle_on_interact.py
tests/test_storage/: __init__.py  conftest.py  test_archive_bundle_builder.py  test_arweave_client.py  test_filebase_client.py  test_sigv4.py  test_types.py
tests/test_types/: test_message.py  test_transaction.py
tests/test_utils/: test_circuit_breaker.py  test_helpers.py  test_helpers_extended.py  test_retry.py  test_security.py
tests/test_wallet/: __init__.py  test_auto_wallet_create_actp.py  test_auto_wallet_provider.py  test_bundler_client.py  test_dual_nonce_manager.py  test_keystore.py  test_smart_wallet_router.py  test_smart_wallet_router_edges.py  test_smart_wallet_signature.py  test_transaction_batcher.py  test_user_op_builder.py  test_x402_sign_typed_data.py
(+155 files in other folders)
