[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agirails"
version = "2.0.0"
description = "AGIRAILS Python SDK - Agent Commerce Transaction Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AGIRAILS Team", email = "developers@agirails.io" },
]
keywords = [
    "blockchain",
    "ai-agents",
    "escrow",
    "payments",
    "web3",
    "ethereum",
    "base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0",
    "pydantic>=2.6.0",
    "aiofiles>=24.0.0",
    "python-dateutil>=2.8.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing_extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-aiofiles>=24.0.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
actp = "agirails.cli.main:app"

[project.urls]
Homepage = "https://agirails.io"
Documentation = "https://docs.agirails.io"
Repository = "https://github.com/agirails/python-sdk"
Issues = "https://github.com/agirails/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agirails"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "B904",   # raise without from in except
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "eth_abi.*"]
ignore_missing_imports = true
